# rs_gtk_tree_chess_openings

./: readme.txt
rsChessTreeECO/: Cargo.toml  README.odt
rsChessTreeECO/src/: main.rs
rsChessTreeECO/src/principal/: arbol_eco.rs  arbol_subeco.rs  const_eco.rs  indice.rs  mod.rs  tablero.rs
rsChessTreeECO/src/principal/ajedrez/: mod.rs
rsChessTreeECO/src/principal/parser/: mod.rs
