[package]
name = "rs_gtk_tree_chess_openings"
version = "0.1.0"
authors = ["calvicius"]

[dependencies]
regex = "1.5.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
png = "0.15.0"
pdf = "0.6.3"
svg = "0.6.0"
cairo-rs = { version = "0.7.1", features = ["png", "pdf", "svg"] }
lazy_static = "1.3.0"
mut_static = "5.0.0"
gdk = "0.11.0"
gdk-pixbuf = "0.7.0"
threadpool = "1.7.1"
num_cpus = "1.10.1"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_24"]
